@@ -1,5 +1,6 @@
 2020-10-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
+	* Define rad as a base unit for now (fixes issues with lumen) and add special case for conversion of rad and related units to length ratios (e.g. m/m)
 	* Fix rates.json not installed
 
 2020-09-30 Hanna Knutsson <hanna.knutsson@protonmail.com>
